adjusted for prod

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <img id="menu-bar" alt="menu bar" src="https://fec-pics.s3.us-east-2.amazonaws.com/Menu-bar.png">
   <div id="ImageCarouselService"></div>
@@ -44,7 +46,9 @@
         <option>2 months (Most common)</option>
       </select>
       <br></br>
-      <button style="background-color: rgb(241, 201, 113); border-radius: 5px; height: 30px; width: 100px; padding: 4px;">Set Up Now</button>
+      <button
+        style="background-color: rgb(241, 201, 113); border-radius: 5px; height: 30px; width: 100px; padding: 4px;">Set
+        Up Now</button>
       <p>Ships from and sold by</p>
       <p>Amazon.com</p>
     </div>
@@ -52,9 +56,12 @@
   <div id="RelatedProductsService"></div>
   <div id="ReviewsService"></div>
   <div id="reviewsPortal"></div>
-  <script src="bundles/service1.js"></script>
-  <script src="bundles/service2.js"></script>
+
+  <script src="/bundles/service1.js"></script>
+
+  <!-- <script src="bundles/service2.js"></script>
   <script src="bundles/service3.js"></script>
-  <script src="bundles/service4.js"></script>
+  <script src="bundles/service4.js"></script> -->
 </body>
+
 </html>
